Fix IE bug with jumping animation

--- a/web/wp-content/themes/stephanie/dev/src/scss/stephanie.scss
+++ b/web/wp-content/themes/stephanie/dev/src/scss/stephanie.scss
@@ -406,7 +406,7 @@ textarea {
     @include vendor-prefix('transform', translate(0, 0));
   }
   50% {
-    @include vendor-prefix('transform', translate(0, -2vmin));
+    @include vendor-prefix('transform', translate(0, -50%));
   }
 }
 
